# causal-grounding-neural-network

./: .gitignore  README.md
causal_engine/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
causal_engine/notebooks/: exploratory.ipynb
causal_engine/src/active_learning/: agent.py
causal_engine/src/causal_graph/: deep_discovery.py  interventions.py  sampling.py  scm.py  structure_learning.py
causal_engine/src/causal_graph/discovery/: base.py  notears.py
causal_engine/src/config/: config.yaml
causal_engine/src/data/: loaders.py  preprocess.py
causal_engine/src/evaluation/: cf_tests.py  demonstrate_agi.py  demonstrate_causality.py  demonstrate_physics.py  evaluate.py  ood_tests.py
causal_engine/src/meta_learning/: maml.py
causal_engine/src/models/: baseline_transformer.py  causal_vae.py  gflownet.py  world_model.py
causal_engine/src/reasoning/: counterfactual.py
causal_engine/src/service/: api.py  server.py
causal_engine/src/training/: train_baseline.py  train_causal.py  train_deep_discovery.py
causal_engine/src/utils/: logger.py  metrics.py  seed.py
causal_engine/tests/: test_causal_vae.py  test_end_to_end.py  test_scm.py
